<resources>
    <string name="app_name">Shy7lo</string>
    <string name="navigation_drawer_open"></string>
    <string name="navigation_drawer_close"></string>
    <string name="app_title">Shy7lo</string>
    <string name="select_country">Select Country</string>
    <string name="select_language">Select Language</string>
    <string name="language_english">English</string>
    <string name="language_arabic">العربية</string>
    <string name="next">Next</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="done_short">Done</string>
    <string name="signup">Sign Up</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="app_info">App info</string>
    <string name="live_chat">Chat with Our Customer Service Team</string>
    <string name="information">Information</string>
    <string name="customer_service">Customer Service</string>
    <string name="call_us">Call Us</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="share">Share</string>
    <string name="shop">SHOP</string>
    <string name="inup_name">Name</string>
    <string name="gender">Gender</string>
    <string name="inup_email">Email</string>
    <string name="inup_password">Password</string>
    <string name="telephone">Telephone</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="apply">Apply</string>
    <string name="request_password">Request new password</string>
    <string name="congratulation">Congratulations!</string>
    <string name="thank_you_choose">Thank you for choosing Shy7lo!</string>
    <string name="thank_you_join">Thank you for joining Shy7lo!</string>
    <string name="login_require">Login required!</string>
    <string name="login_now">Login Now</string>
    <string name="hint_name">Your name</string>
    <string name="hint_fist_name">Your first name</string>
    <string name="hint_last_name">Your last name</string>
    <string name="hint_your_gender">Your gender</string>
    <string name="hint_your_email">Your email</string>
    <string name="hint_your_telephone">Your telephone</string>
    <string name="hint_your_password">At least 6 characters</string>
    <string name="shy7lo">Shy7lo</string>
    <string name="products">PRODUCTS</string>
    <string name="search">Search</string>
    <string name="shopping_bag">Shopping Bag</string>
    <string name="wishlist">WISHLIST</string>
    <string name="my_shy7lo">MyShy7lo</string>
    <string name="SAR">SAR</string>
    <string name="AED">AED</string>
    <string name="QAR">QAR</string>
    <string name="OMR">OMR</string>
    <string name="KWD">KWD</string>
    <string name="BHD">BHD</string>
    <string name="details">Details</string>
    <string name="additional_info">Additional Information</string>
    <string name="sku">Sku</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="perfume_size">Perfume Size</string>
    <string name="frame_size">Frame Size</string>
    <string name="frame_type">Frame Type</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="filter">Filter</string>
    <string name="reset_all">Reset All</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="all">All</string>
    <string name="view">View</string>
    <string name="view_shopping_bag">Edit Shopping Bag</string>
    <string name="sort">Sort</string>
    <string name="price_low_to_high">Price (Low to High)</string>
    <string name="price_high_to_low">Price (High to Low)</string>
    <string name="sort_discount">Discount</string>
    <string name="sort_price_low">Price: High to Low</string>
    <string name="sort_price_high">Price: Low to High</string>
    <string name="sort_new">New</string>
    <string name="sort_popularity">Most Popular</string>
    <string name="sort_gridview">Grid view</string>
    <string name="sort_listview">List view</string>
    <string name="nothing_found">Nothing found</string>
    <string name="change_search">Please change search criteria</string>
    <string name="change_filters">Change filters</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="exclusive_tax">Excl Tax:</string>
    <string name="select_size">Select size</string>
    <string name="osm_choice">Awesome choice!</string>
    <string name="what_want">What do you want to do now?</string>
    <string name="countinue_shoping">Continue shopping</string>
    <string name="view_cart">View cart</string>
    <string name="upgrade">Upgrade</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="international" translatable="false">International</string>
    <string name="us" translatable="false">US</string>
    <string name="update_text">An update is available for the app. Please update for better experience.</string>
    <string name="offline_text">The Internet connection appears to be offline</string>
    <string name="remove_text">Your cart will be update as some items are not in stock or quantity are less available</string>
    <string name="cart_update">Cart update</string>
    <string name="fash_shipping">Free Fast Shipping</string>
    <string name="genuine_brands">100% Genuine Brands</string>
    <string name="days_exchange">30 Days Return And Exchange</string>
    <string name="cash_return">Cash Return, NOT Credit</string>
    <string name="shopping_bag_empty">Your shopping bag is empty. \nTo add products to shopping bag go to product feed, select desier product and click add to bag button.</string>
    <string name="go_product">Go to Products</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery">Delivery</string>
    <string name="remove">Remove</string>
    <string name="save_later">Save for later</string>
    <string name="checkout">Proceed to Checkout</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="product_removed">Successfuly removed from wishlist</string>
    <string name="not_member">Not a  member?</string>
    <string name="continue_guest">Continue as guest</string>
    <string name="or">OR</string>
    <string name="login_shy7lo_account">Login to your Shy7lo account</string>
    <string name="emaild_address">Email Address</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="my_account">My Account</string>
    <string name="logout">Log out</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="mail">cs@shy7lo.com</string>
    <string name="phone">920002352</string>
    <string name="shipment">Shipment</string>
    <string name="review_pay">Review &amp; Pay</string>
    <string name="email">Email: </string>
    <string name="full_name">First Name</string>
    <string name="last_full_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="country_code">Country Code</string>
    <string name="carrier_code">Carrier Code</string>
    <string name="number_last7">Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="required_fields">* Required Fields</string>
    <string name="select">Select</string>
    <string name="select_address">Select Address</string>
    <string name="set_address">Set Address</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="cash_delivery">Cash on Delivery</string>
    <string name="credit_debit_card">Credit Cards</string>
    <string name="card_number">Card Number *</string>
    <string name="name_card">Name on Card</string>
    <string name="expiraton_date">Expiration Date *</string>
    <string name="choose_month">-- Choose Month --</string>
    <string name="choose_year">-- Choose Year --</string>
    <string name="cvv">Cvv *</string>
    <string name="billing_same_shipping">Billing Address Same As Shipping Address</string>
    <string name="register_news">Register NewsLetter</string>
    <string name="sadad">Sadad</string>
    <string name="paypal">Paypal</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="include_duties">Include all duties</string>
    <string name="validate">Validate</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="buy_now">Buy Now</string>
    <string name="review_order">Review Your Order</string>
    <string name="shiping_address">Shipping Address</string>
    <string name="order_id">Order ID</string>
    <string name="your_order_no">Your Order No</string>
    <string name="mobile_no">Mobile No</string>
    <string name="msg_email_address">Please enter email</string>
    <string name="msg_gender">Please select gender</string>
    <string name="msg_telephone">Please enter telephone</string>
    <string name="msg_email_not_valid">Please enter valid email address</string>
    <string name="msg_password">Please enter password</string>
    <string name="msg_password_min_char">Password should be at least 8 characters</string>
    <string name="msg_password_valid_char">Minimum of different classes of characters in password is 3. Classes of characters: Lower Case, Upper Case, Digits, Special Characters.</string>
    <string name="msg_valid_coupon_code">Enter valid promo code</string>
    <string name="msg_coupon_code">Please Enter Your Promo Code</string>
    <string name="msg_firstname">Please enter first name</string>
    <string name="msg_lastname">Please enter lastname</string>
    <string name="msg_contact_number">Please enter phone number</string>
    <string name="msg_address">Please enter address</string>
    <string name="msg_city">Please enter city</string>
    <string name="msg_other_city">Please enter other city</string>
    <string name="msg_region">Please enter region</string>
    <string name="msg_select_dob">Please select date of birth</string>
    <string name="msg_select_gender">Please select gender</string>
    <string name="msg_session_expire">You need to login again as your session expired!</string>
    <string name="welcome">Welcome to</string>
    <string name="english">English</string>
    <string name="arabic">عـربـي</string>
    <string name="login">Log In</string>
    <string name="have_account">I already have an account</string>
    <string name="your_style">your premeir style destination</string>
    <string name="msg_checkout_shopping">Would you like to check out or continue shopping?</string>
    <string name="item_added">Item has been added</string>
    <string name="to_bag">View Shopping Bag</string>
    <string name="order">Order</string>
    <string name="need_help">Need Help?</string>
    <string name="start">Start</string>
    <string name="no_thanks">No, thanks</string>
    <string name="msg_join_thousands">You have joined thousands of happy customers who buy with us!</string>
    <string name="msg_special_test">Now you can go through a short test and get special offers and discounts tailored just for you!</string>
    <string name="status">Status: </string>
    <string name="estimated_delivery">Estimated delivery:</string>
    <string name="edit">Edit</string>
    <string name="default_shiping_information">Default Shipping Information</string>
    <string name="account">MY ACCOUNT</string>
    <string name="help_faqs">Help &amp; FAQs</string>
    <string name="for_customers">For customers</string>
</resources>