<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lnrContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/name"
            android:textColor="@color/gray_4a"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDeleteAddress"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_delete_address" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="@color/gray_4a"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textColor="@color/gray_4a"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textColor="@color/gray_4a"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/tvTelephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telephone"
        android:textColor="@color/gray_4a"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDefaultInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="@string/default_shiping_information"
            android:textColor="@color/gray_99"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:text="@string/edit"
            android:textColor="@color/gray_52"
            android:textSize="@dimen/_13sdp"
            android:visibility="visible" />

    </LinearLayout>


</LinearLayout>