<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textSize="@dimen/h2"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/congratulation"
            android:textColor="@color/black"
            android:textSize="@dimen/h2"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/msg_join_thousands"
            android:textColor="@color/black"
            android:textSize="@dimen/h1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/msg_special_test"
            android:textColor="@color/black"
            android:textSize="@dimen/h1" />


        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_new"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/start"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/h1" />

        <TextView
            android:id="@+id/tvNoThanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/no_thanks"
            android:textColor="@color/gray_85"
            android:textSize="@dimen/h1" />


    </LinearLayout>

</LinearLayout>