<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvLoginRequired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/login_require"
        android:textColor="@color/black"
        android:textSize="@dimen/h2"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tvFavouriteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/msg_session_expire"
        android:textColor="@color/black"
        android:textSize="@dimen/h1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/gray_33" />

    <Button
        android:id="@+id/btnLoginNow"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:padding="10dp"
        android:text="@string/login_now"
        android:textColor="@color/order_text_selector"
        android:textSize="@dimen/h1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/gray_33" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:padding="10dp"
        android:text="@string/continue_guest"
        android:textColor="@color/order_text_selector"
        android:textSize="@dimen/h1" />

</LinearLayout>