<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_alpha1">

    <LinearLayout
        android:id="@+id/lnrContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rectangle_grayf2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/need_help"
                android:textColor="@color/gray_85"
                android:textSize="@dimen/h2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_db" />

            <TextView
                android:id="@+id/tvHelpFAQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/help_faqs"
                android:textColor="@color/help_blue"
                android:textSize="@dimen/h2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_db" />

            <TextView
                android:id="@+id/tvInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/information"
                android:textColor="@color/help_blue"
                android:textSize="@dimen/h2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_db" />

            <TextView
                android:id="@+id/tvForCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/for_customers"
                android:textColor="@color/help_blue"
                android:textSize="@dimen/h2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_db" />

            <TextView
                android:id="@+id/tvAppInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/app_info"
                android:textColor="@color/help_blue"
                android:textSize="@dimen/h2" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_rectangle_white"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textColor="@color/help_blue"
            android:textSize="@dimen/h2" />

    </LinearLayout>

</RelativeLayout>